Bug 57870 - REGRESSION (r82960): Lots of tests crashing in DrawingAreaImpl::enterAcceleratedCompositingMode on Windows 7 Release (WebKit2 Tests)
Summary: REGRESSION (r82960): Lots of tests crashing in DrawingAreaImpl::enterAccelera...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Windows 7
: P2 Normal
Assignee: Adam Roben (:aroben)
URL: http://build.webkit.org/results/Windo...
Keywords: LayoutTestFailure, MakingBotsRed, PlatformOnly, Regression
Depends on:
Blocks:
 
Reported: 2011-04-05 12:11 PDT by Adam Roben (:aroben)
Modified: 2011-04-05 12:34 PDT (History)
1 user (show)

See Also:


Attachments
Disable accelerated compositing on Windows machines that don't support it (9.99 KB, patch)
2011-04-05 12:31 PDT, Adam Roben (:aroben)
andersca: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2011-04-05 12:11:42 PDT
Lots of tests have been crashing in DrawingAreaImpl::enterAcceleratedCompositingMode on Windows 7 Release (WebKit2 Tests) since r82960. See the URL for crash logs.
Comment 1 Adam Roben (:aroben) 2011-04-05 12:31:04 PDT
Created attachment 88292 [details]
Disable accelerated compositing on Windows machines that don't support it
Comment 2 Adam Roben (:aroben) 2011-04-05 12:34:21 PDT
Committed r82966: <http://trac.webkit.org/changeset/82966>